fix(attachments): Wrong padding on image attachments

--- a/internal_packages/attachments/stylesheets/attachments.less
+++ b/internal_packages/attachments/stylesheets/attachments.less
@@ -140,6 +140,7 @@
   vertical-align: top;
   margin-bottom: @spacing-standard;
   margin-right: @spacing-standard;
+  margin-left: @spacing-standard;
 
   .attachment-download-progress,
   .attachment-upload-progress {
